// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Validation should correctly render 'now' entity type 1`] = `
<styled.div>
  The date the respondent begins the survey
</styled.div>
`;

exports[`Date Validation should filter the available units for the dd/mm/yyyy 1`] = `
[
  "Days",
  "Months",
  "Years",
]
`;

exports[`Date Validation should filter the available units for the mm/yyyy 1`] = `
[
  "Months",
  "Years",
]
`;

exports[`Date Validation should filter the available units for the yyyy 1`] = `
[
  "Years",
]
`;

exports[`Date Validation should render 1`] = `
<div>
  <styled.div
    align="top"
    fillHeight={true}
    horizontalAlign="start"
  >
    <Styled(styled.div)
      cols={3}
    >
      <styled.h1>
        foobar
         is
      </styled.h1>
    </Styled(styled.div)>
    <styled.div
      cols={9}
    >
      <Duration
        duration={
          {
            "unit": "Months",
            "value": 5,
          }
        }
        name="offset"
        onChange={[MockFunction]}
        onUpdate={[MockFunction]}
        units={
          [
            "Years",
          ]
        }
        value="Months"
      />
    </styled.div>
  </styled.div>
  <styled.div
    align="top"
    fillHeight={true}
    horizontalAlign="start"
  >
    <styled.div
      cols={3}
    >
      <Styled(Component) />
    </styled.div>
    <styled.div
      cols={9}
    />
  </styled.div>
  <styled.div
    align="top"
    fillHeight={true}
    horizontalAlign="start"
  >
    <Styled(styled.div)
      cols={3}
    >
      <PositionPicker
        onChange={[MockFunction]}
        onUpdate={[MockFunction]}
        value="Before"
      />
      <Component />
    </Styled(styled.div)>
    <styled.div
      cols={9}
    >
      <ValidationPills
        Custom={[Function]}
        Metadata={[Function]}
        Now={[Function]}
        PreviousAnswer={[Function]}
        answer={
          {
            "id": "1",
            "properties": {
              "format": "YYYY",
            },
            "type": "Date",
          }
        }
        entityType="Custom"
        onChange={[MockFunction]}
        onChangeUpdate={[MockFunction]}
        onEntityTypeChange={[MockFunction]}
        onUpdate={[MockFunction]}
        readKey="read"
        validation={
          {
            "customDate": "2018-01-01",
            "enabled": true,
            "entityType": "Custom",
            "id": "123",
            "offset": {
              "unit": "Months",
              "value": 5,
            },
            "relativePosition": "Before",
            "validationErrorInfo": {
              "errors": [
                {
                  "errorCode": "ERR_NO_VALUE",
                  "field": "custom",
                  "id": "0efd3ed1-8e0d-4b0c-9e39-59010751dbdf",
                  "type": "validation",
                },
              ],
            },
          }
        }
      />
    </styled.div>
  </styled.div>
</div>
`;

exports[`Date Validation should render all units for date range answers 1`] = `
[
  "Years",
]
`;

exports[`Date Validation should render metadata and custom for date range type answer 1`] = `
<ValidationPills
  Custom={[Function]}
  Metadata={[Function]}
  answer={
    {
      "id": "1",
      "properties": {
        "format": "YYYY",
      },
      "type": "DateRange",
    }
  }
  entityType="Custom"
  onChange={[MockFunction]}
  onChangeUpdate={[MockFunction]}
  onEntityTypeChange={[MockFunction]}
  onUpdate={[MockFunction]}
  readKey="read"
  validation={
    {
      "customDate": "2018-01-01",
      "enabled": true,
      "entityType": "Custom",
      "id": "123",
      "offset": {
        "unit": "Months",
        "value": 5,
      },
      "relativePosition": "Before",
      "validationErrorInfo": {
        "errors": [
          {
            "errorCode": "ERR_NO_VALUE",
            "field": "custom",
            "id": "0efd3ed1-8e0d-4b0c-9e39-59010751dbdf",
            "type": "validation",
          },
        ],
      },
    }
  }
/>
`;

exports[`Date Validation should render previous answer, metadata, custom and now for date type answer 1`] = `
<ValidationPills
  Custom={[Function]}
  Metadata={[Function]}
  Now={[Function]}
  PreviousAnswer={[Function]}
  answer={
    {
      "id": "1",
      "properties": {
        "format": "YYYY",
      },
      "type": "Date",
    }
  }
  entityType="Custom"
  onChange={[MockFunction]}
  onChangeUpdate={[MockFunction]}
  onEntityTypeChange={[MockFunction]}
  onUpdate={[MockFunction]}
  readKey="read"
  validation={
    {
      "customDate": "2018-01-01",
      "enabled": true,
      "entityType": "Custom",
      "id": "123",
      "offset": {
        "unit": "Months",
        "value": 5,
      },
      "relativePosition": "Before",
      "validationErrorInfo": {
        "errors": [
          {
            "errorCode": "ERR_NO_VALUE",
            "field": "custom",
            "id": "0efd3ed1-8e0d-4b0c-9e39-59010751dbdf",
            "type": "validation",
          },
        ],
      },
    }
  }
/>
`;
